createアクションにデータ保存の記述を書く

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -124,7 +124,7 @@ a {
   margin-bottom: 20px;
 }
 .greeting__link{
-  text-decoration: underline;
+  text-decoration: none;
 }
 .page-heading {
   font-size: 30px;
